# EVA

./: .gitignore  CONTRIBUTING.md  README.md  paper.bib  paper.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
eva/: __init__.py  align.py  convert.py  filters.py  metrics.py  optimizer.py  preprocess.py  report.py  sync.py
scripts/: compare_diagnostics.py  validation.py
tests/: test_align.py  test_filters.py  test_metrics.py  test_pipeline.py
