[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eva"
version = "1.0.0"
description = "EEG data Validation and preprocessing Assistant"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "AQUINO, R. D. G.", email = "aquinordga@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "mne>=1.6.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "h5py>=3.9.0",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Repository = "https://github.com/aquinordg/eva"

[tool.setuptools.packages.find]
where = ["."]
include = ["eva*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
